# Null-Threat-Desktop

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
databases/: README.md
docs/: CODE_SIGNING.md  PRODUCT-COPY.md  TESTING.md
rules/: suspicious_metadata.yar
scripts/: ci-eicar-smoke.sh  ci-sanitize-signing-env.ps1  ci-sanitize-signing-env.sh  download-background-assets.ps1  generate-release-checksums.sh  setup-clamav-ci.ps1  setup-clamav-linux.sh  setup-clamav-macos.sh  setup-clamav.ps1  setup-gstack.ps1  setup-scanner-tools.ps1  setup-scanner-tools.sh  setup-yara-ffprobe-linux.sh  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/windows/: freshclam.conf
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: null-threat.toml
src-tauri/resources/yara_rules/: .gitkeep  packed_executables.yar  polyglot.yar  video_threats.yar
src-tauri/src/: app_paths.rs  bundle_paths.rs  commands.rs  hash_intel.rs  lib.rs  main.rs  notifications.rs  process_util.rs  report.rs  setup.rs  signatures.rs  tray.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/quarantine/: keychain.rs  mod.rs  vault.rs
src-tauri/src/scanner/: clamav.rs  deep.rs  entropy.rs  hash.rs  metadata.rs  mod.rs  scoring.rs  steg.rs  structure.rs  tools.rs  video.rs  yara.rs
src-tauri/src/watcher/: mod.rs
(+54 files in other folders)
