[package]
name = "null-threat"
version = "0.1.0"
edition = "2021"
description = "Null Threat – Desktop Security Scanner"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
walkdir = "2"
which = "6"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
csv = "1"
ureq = { version = "2", features = ["tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
keyring = "3"
base64 = "0.22"
printpdf = "0.7"

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"
debug = false

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
windows = { version = "0.61", features = ["Win32_UI_Shell"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
